--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -43,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.21",
+    "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "eslint": "^8.6.0",
