--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -5,7 +5,7 @@ services:
     # we are specifying the path from where to build are container from
     build:
       context: ./
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile
     restart: always
     # the container will be running from port 3000
     ports: [3000:3000]
